# ma_tricks

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  ma_trick.pro  ui_main_view.h
forms/: main_view.ui  set_dim.ui
hdr/: field.h  helper.h  main_win.h  math_mod.h  math_module.h  set_dim.h  simple_math.h
log/: cppcheck_msg.txt  valgrind_msg.txt
src/: field.cpp  main.cpp  main_win.cpp  math_mod.cpp  set_dim.cpp  simple_math.cpp
